# pegasus-monitord-plugins

./: .gitignore  NOTICE  README.md
.github/workflows/: ci.yml
docs/: PLUGIN-AUTHORING.md
plugins/wfevents/: README.md  SOURCES.md  pyproject.toml
plugins/wfevents/src/monitord_wfevents/: __init__.py  htcondor_poll.py  plugin.py
plugins/wfevents/tests/: conftest.py  synthetic_run.py  test_host_contract.py  test_replay_smoke.py  test_tick_condor.py  test_translation.py
