[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pegasus-monitord-plugin-wfevents"
version = "0.1.0"
description = "pegasus-monitord plugin emitting workflow-monitor-compatible wfevents.jsonl"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/mjstealey/pegasus-monitord-plugins"

[project.optional-dependencies]
htcondor = ["htcondor"]

[project.entry-points."pegasus.monitord.plugins"]
wfevents = "monitord_wfevents.plugin:WfEventsPlugin"

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/monitord_wfevents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
